--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -6,6 +6,8 @@
     = f.input :line
     = f.input :code
     = f.input :anonymous
+    = f.input :user_id
+    = f.input :question_id
 
   .form-actions
     = f.button :submit
