Users can see a number of users

--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -5,6 +5,7 @@
     = f.input :content
     = f.input :code
     = f.input :anonymous
+    = f.input :question_id
 
   .form-actions
     = f.button :submit
