--- a/app/views/good_answers/show.html.haml
+++ b/app/views/good_answers/show.html.haml
@@ -5,7 +5,7 @@
   = @good_answer.question_id
 %p
   %b User:
-  = @good_answer.user_id
+  = @good_answer.comment_id
 
 = link_to 'Edit', edit_good_answer_path(@good_answer)
 \|
