--- a/app/views/good_answers/show.html.haml
+++ b/app/views/good_answers/show.html.haml
@@ -4,7 +4,7 @@
   %b Question:
   = @good_answer.question_id
 %p
-  %b User:
+  %b Comment:
   = @good_answer.comment_id
 
 = link_to 'Edit', edit_good_answer_path(@good_answer)
