--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -20,6 +20,18 @@
     %br/
     = f.password_field :password_confirmation
   %div
+    = f.label :school
+    %br/
+    = f.text_field :school
+  %div
+    = f.label :sex
+    %br/
+    = f.text_field :sex
+  %div
+    = f.label :level
+    %br/
+    = f.text_field :level
+  %div
     = f.label :current_password
     %i (we need your current password to confirm your changes)
     %br/
