--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,3 +2,13 @@
   User: #{@user.name}
 %p
   Email: #{@user.email if @user.email}
+%p
+  School: #{@user.school}
+%p
+  Sex: #{@user.sex}
+%p
+  Level: #{@user.level}
+%p
+  Points: #{@user.points}
+%p
+  Z-Scores: #{@user.z_scores}
