--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -25,11 +25,26 @@
   %b= pluralize(@question.comments.count, "Answers")
 %p 
   %b= pluralize(@question.usefuls.count, "Useful vote")
+%p
+  %b Feedback:
+%table
+  %tr
+    %th ID
+    %th Name
+    %th Detail
+  - @feedback.each do |feedback|
+    %tr
+      %td= feedback.id
+      %td= feedback.name
+      %td= feedback.detail
+    %br
 = link_to 'Useful question', useful_path(id: '', type: 'Question', question_id: @question.id, useful: {user_id: current_user.id}), method: :post
 \|
 = link_to 'Edit', edit_question_path(@question)
 \|
 = link_to 'Back', questions_path
+%p
+  %b Comment:
 %table
   %tr
     %th ID
