--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -37,7 +37,7 @@
         %td= feedback.detail
 %p
   %b Tag list:
-  %br= raw @question.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')
+  %br= raw @question.tag_list.map { |t| link_to t, tags_path(t) }.join(', ')
 = link_to 'Useful question', useful_path(id: '', type: 'Question', question_id: @question.id, useful: {user_id: current_user.id}), method: :post
 \|
 = link_to 'Edit', edit_question_path(@question)
