--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,5 +1,9 @@
 %h1 Listing questions
 
+#tag_cloud
+  - tag_cloud Question.tag_counts, %w(label) do |tag, css_class|
+    = link_to tag.name, tags_path(tag.name), class: css_class
+
 %table
   %tr
     %th id
