Fix tags of a question

--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -2,7 +2,7 @@
 
 #tag_cloud
   - tag_cloud Question.tag_counts, %w(label) do |tag, css_class|
-    = link_to tag.name, tags_path(tag.name), class: css_class
+    = link_to tag.name, questions_tags_path(tag.name), class: css_class
 
 %table
   %tr
