Add users' tags

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -32,6 +32,10 @@
     %br/
     = f.text_field :level
   %div
+    = f.label :tag_list
+    %br/
+    = f.text_field :tag_list
+  %div
     = f.label :current_password
     %i (we need your current password to confirm your changes)
     %br/
