--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,8 @@
 %h2 Users
+#tag_cloud
+  - tag_cloud User.tag_counts, %w(label) do |tag, css_class|
+    = link_to tag.name, users_tags_path(tag.name), class: css_class
+
 - @users.each do |user|
   %br/
   #{link_to user.email, user} signed up #{user.created_at.to_date}
