--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,6 +1,7 @@
 // Set the correct sprite paths
 $iconSpritePath: asset-url('glyphicons-halflings.png', image);
 $iconWhiteSpritePath: asset-url('glyphicons-halflings-white.png', image);
+/*Bootstrap.min have to be loaded before bootstrap-responsive.min*/
 @import "bootstrap.min";
 body { padding-top: 60px; }
-@import "bootstrap-responsive";
+@import "bootstrap-responsive.min";
