--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,19 +1,24 @@
+%a.btn.btn-navbar{"data-toggle" => "collapse", "data-target" => ".nav-collapse"}
+  %span.icon-bar
+  %span.icon-bar
+  %span.icon-bar
 = link_to "Green Dophins", root_path, :class => 'brand'
-%ul.nav
-  = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
-    = text_field_tag :query, params[:query], class: 'search-query'
-  - if user_signed_in?
-    %li
-      = link_to('Logout', destroy_user_session_path, :method=>'delete')
-  - else
-    %li
-      = link_to('Login', new_user_session_path)
-  - if user_signed_in?
-    %li
-      = link_to('Edit account', edit_user_registration_path)
-    - if current_user.has_role? :admin
+.nav-collapse.collapse{:style => "height: 0px;"}
+  %ul.nav
+    = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
+      = text_field_tag :query, params[:query], class: 'search-query'
+    - if user_signed_in?
       %li
-        = link_to('Admin', users_path)
-  - else
-    %li
-      = link_to('Sign up', new_user_registration_path)
+        = link_to('Logout', destroy_user_session_path, :method=>'delete')
+    - else
+      %li
+        = link_to('Login', new_user_session_path)
+    - if user_signed_in?
+      %li
+        = link_to('Edit account', edit_user_registration_path)
+      - if current_user.has_role? :admin
+        %li
+          = link_to('Admin', users_path)
+    - else
+      %li
+        = link_to('Sign up', new_user_registration_path)
