--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,10 +12,11 @@
     = csrf_meta_tags
     = yield(:head)
   %body
-    %header.navbar.navbar-fixed-top
-      %nav.navbar-inner
-        .container
-          = render 'layouts/navigation'
+    %header
+      .navbar.navbar-fixed-top
+        .navbar-inner
+          .container
+            = render 'layouts/navigation'
     #main{:role => "main"}
       .container
         .row
