--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -29,5 +29,7 @@
         .span8
           %h5 Expert tags
           #{user_tag_list(@user)}
-=render 'questions/question_feed'
+.row
+  .span8.offset2
+    =render 'questions/question_feed'
 
