--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -39,8 +39,11 @@
   %b Tag list:
   = raw @question.tag_list.map { |t| link_to t, questions_tags_path(t), class: "label" }.join(' ')
 = link_to 'Useful question', useful_path(id: '', type: 'Question', question_id: @question.id, useful: {user_id: current_user.id}), method: :post
-\|
-= link_to 'Edit', edit_question_path(@question)
+- if current_user_owner?(User.find(@question.user_id))
+  \|
+  = link_to 'Edit', edit_question_path(@question)
+  \|
+  = link_to 'Destroy', @question, :data => {:confirm => 'Are you sure?'}, :method => :delete
 \|
 = link_to 'Back', questions_path
 %p
@@ -77,7 +80,7 @@
         = link_to 'Edit', edit_comment_path(comment)
         \|
       %td
-        = link_to 'Destroy', comment, :confirm => 'Are you sure?', :method => :delete
+        = link_to 'Destroy', comment, :data => {:confirm => 'Are you sure?'}, :method => :delete
         \|
       %td
         = link_to 'Useful comment', useful_path( id: '', comment_id: comment.id, type: 'Comment' , useful: {user_id: current_user.id}), method: :post
