--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -7,5 +7,6 @@
     = f.input :anonymous
     = f.input :question_id, :as => :hidden, :input_html => { :value => @comment.question_id }
     = f.input :line, :as => :hidden, :input_html => { :value => 0 }
+    = f.input :hidden, :as => :hidden, :input_html => { :value => false }
   .form-actions
     = f.button :submit
