Add a user feed

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -31,5 +31,5 @@
           #{user_tag_list(@user)}
 .row
   .span8.offset2
-    =render 'questions/question_feed'
-
+    / =render 'questions/question_feed'
+    =render 'user_feed'
