--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -3,7 +3,7 @@
 
   .form-inputs
     = f.input :title
-    = f.input :content
+    = f.input :content, :input_html => { :class => 'editable' }
     = f.input :code
     = f.input :error
     = f.input :tag_list
