Change the name

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,7 +2,7 @@
   %span.icon-bar
   %span.icon-bar
   %span.icon-bar
-= link_to "Green Dophins", root_path, :class => 'brand'
+= link_to "Green Dophin", root_path, :class => 'brand'
 .nav-collapse.collapse{:style => "height: 0px;"}
   %ul.nav
     = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
