--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,10 @@
     = javascript_include_tag "application"
     %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/require.js"}
     %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/vendor/jquery-1.7.2.js"}
-    %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/aloha.js", :'data-aloha-plugins' => "common/ui, common/format,common/list,common/link,common/highlighteditables,common/table,common/characterpicker,common/image"}
+    :javascript
+      var Aloha = window.Aloha || (window.Aloha = {});
+      Aloha.settings = {sidebar: {disabled: true}};
+    %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/aloha.js", :'data-aloha-plugins' => "common/ui, common/format,common/list,common/link,common/highlighteditables,common/table,common/characterpicker,common/image,common/contenthandler,common/undo"}
     :javascript
       Aloha.ready( function() {var $ = Aloha.jQuery; $('.editable').aloha();});
     = csrf_meta_tags
