--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -8,6 +8,7 @@
     = f.input :error
     = f.input :tag_list, input_html: { data: {load: @question.tags} }
     = f.input :anonymous 
+    = f.input :fast_answer
 
   %table
     %tr
