--- a/app/views/questions/_question_comment_form.html.haml
+++ b/app/views/questions/_question_comment_form.html.haml
@@ -5,9 +5,9 @@
     = f.input :code, :as => :hidden, :input_html => { :value => 0 }
     = f.input :question_id, :as => :hidden, :input_html => { :value => @question.id } 
     = f.input :line, :as => :hidden, :input_html => { :value => 0 }
-    - if current_user.has_role?(:ta) && !@taLimitTime.past?()
+    - if @delayTAAnswer 
       = f.input :hidden, :as => :hidden, :input_html => { :value => true }
-    - elsif current_user.has_role?(:instructor) && !@instructureLimitTime.past?()
+    - elsif @delayInstructorAnswer
       = f.input :hidden, :as => :hidden, :input_html => { :value => true }
     - else
       = f.input :hidden, :as => :hidden, :input_html => { :value => false }
